--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "actionsheet-react": "^1.0.14",
     "axios": "^0.24.0",
     "copy-to-clipboard": "^3.3.1",
+    "i18next": "^21.9.2",
+    "i18next-browser-languagedetector": "^6.1.5",
     "o9n": "^2.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-i18next": "^11.18.6",
     "react-loading": "^2.0.3",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
