--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
+    "react-svg": "^16.1.34",
     "react-switch": "^6.0.0",
     "react-timer-hook": "^3.0.5",
     "use-local-storage": "^2.3.6",
