--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "copy-to-clipboard": "^3.3.1",
     "i18next": "^21.9.2",
     "i18next-browser-languagedetector": "^6.1.5",
+    "motion": "^11.16.0",
     "o9n": "^2.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.18.6",
     "react-loading": "^2.0.3",
+    "react-modal-sheet": "^4.0.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
