--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "actionsheet-react": "^1.0.14",
     "axios": "^0.24.0",
     "copy-to-clipboard": "^3.3.1",
+    "core-js": "^3.40.0",
     "i18next": "^21.9.2",
     "i18next-browser-languagedetector": "^6.1.5",
     "motion": "^11.16.0",
@@ -33,15 +34,16 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@types/core-js": "^2.5.8",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "react-app-rewired": "^2.2.1",
-    "typescript": "^5.4.5"
+    "typescript": "^5.7.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
