--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.8.3",
     "actionsheet-react": "^1.0.14",
     "axios": "^0.24.0",
+    "caniuse-lite": "^1.0.30001696",
     "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.40.0",
     "i18next": "^21.9.2",
