The animations update

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "caniuse-lite": "^1.0.30001696",
         "copy-to-clipboard": "^3.3.1",
         "core-js": "^3.40.0",
+        "framer-motion": "^12.0.6",
         "i18next": "^21.9.2",
         "i18next-browser-languagedetector": "^6.1.5",
         "motion": "^11.16.0",
